# hpc_homework

./: .gitignore  README.md  check_hyper_threading  check_hyper_threading.cpp  hw0_report.md  test.cpp
CS7331-master/: benchmarks.md  project_description.md  readme.md
CS7331-master/LLVM/CudaKernelAnalyzer/: CMakeLists.txt  CudaKernelAnalyzer.cpp
CS7331-master/LLVM/FuncAnalyzer/: CMakeLists.txt  FuncAnalyzer.cpp
CS7331-master/LLVM/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
CS7331-master/code_samples/compilers/: knapsack.cpp
CS7331-master/code_samples/dependence/: dependent_increment_serial.c  dependent_increment_task.c  increment_parallel_region.c  increment_serial.c  increment_single.c  increment_task_paralle.c
CS7331-master/code_samples/floating-point/: fp_assoc.cpp
CS7331-master/code_samples/llvm/: CMakeLists.txt
CS7331-master/code_samples/llvm/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld_clang_loadable.cpp
CS7331-master/code_samples/llvm/VRP/: CMakeLists.txt  vrp.cpp  vrp_verbose.cpp
CS7331-master/code_samples/openmp/: dot_product.c  dot_product_tiled.c  hello.c  nested_loop.c  scale.c  simd.c  sum_reduce.c  vec_add.c
CS7331-master/code_samples/opts/: 2D_init.c  2D_init_good.c  get_miss_rates.sh  (+4 more)
CS7331-master/demos/: compilers.md  llvm_AST_visitor.md  llvm_libtool.md  loop_unroll.md  mpi.md  perf.md  spatial_locality.md  temporal_locality.md
HW0/: report.md
hw0/: matvec.c  readme.md  scale.c
hw1/: readme.md  test.cpp
hw1/NPB/: Makefile  README.md  analysis.py  draw.py  draw_multiple_conf.py  draw_one_line.py  run.sh
(+670 files in other folders)
